# blog_src

./: .gitignore  about.md  blog.cabal  deploy.sh  index.html  nixpkgs-src.json  shell.nix  site.hs  stack.yaml
css/: main.css
js/: emojify.js  prism.js  render.js
posts/: 2015-08-12-spqr.markdown  2016-08-05-setting-up-apt-mirror-on-debian-jessie.md  2016-08-10-learning-javascript.md  2016-09-03-fisher-yates-shuffle-in-elm.md  2016-10-20-derivation-of-the-normal-equation-for-linear-regression.md  2016-11-27-new-static-site-generator.md  2016-12-01-book01.md  2016-12-02-book02.md  2016-12-03-book03.md  2016-12-04-book04.md  2016-12-04-frc-analysis.md  2016-12-05-book05.md  2016-12-06-book06.md  2016-12-07-book07.md  2016-12-08-book08.md  2016-12-09-book09.md  2016-12-10-book10.md  2016-12-12-book11.md  2016-12-12-book12.md  2016-12-12-class-ai.md  2016-12-13-book13.md  2016-12-14-book14.md  2016-12-15-book15.md  2016-12-16-book16.md  2016-12-17-book17.md  2016-12-18-book18.md  2016-12-22-book19.md  2016-12-22-book20.md  2016-12-22-book21.md  2016-12-22-book22.md  2016-12-23-book23.md  2016-12-25-book24.md  2016-12-25-book25.md  2016-12-30-yukutoshi.md  2017-01-06-intern.md  2017-01-08-setting-up-copperhead-os.md  2017-02-06-docker-rmi.md  2017-02-12-setting-up-a-windows-vm.md  2017-02-14-fix-awkward-spacing-in-pandoc.md  2017-03-18-line-internship.md  (+14 more)
templates/: archive.html  default.html  post-list.html  post.html
