name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , bytestring
                  , containers
                  , text
                  , hakyll
                  , pandoc
                  , pandoc-types
                  , process
                  , regex-pcre
                  , utf8-string
  ghc-options:      -threaded
  default-language: Haskell2010
